fixes for iOS horizontal scrolling, tweak responsive type styles

--- a/_sass/components/blocks/_base.scss
+++ b/_sass/components/blocks/_base.scss
@@ -9,6 +9,10 @@
 
   .delta {
     font-size: $delta + 2px;
+
+    @media screen and ( max-width: $medium ) {
+      font-size: $epsilon;
+    }
   }
 
   .epsilon {
