--- a/_sass/components/blocks/_feature.scss
+++ b/_sass/components/blocks/_feature.scss
@@ -6,10 +6,10 @@
     @media screen and ( max-width: $medium ) {
       padding-top: 40px;
       padding-bottom: 40px;
-      text-align: center;
+      text-align: left;
 
       .text-right {
-        text-align: center;
+        text-align: left;
       }
     }
   }
@@ -21,6 +21,11 @@
   img {
     margin: 10px 15%;
     width: 70%;
+
+    @media screen and ( max-width: $medium ) {
+      margin: 20px 25%;
+      width: 50%;
+    }
   }
 
   h2 {
